added cluster and network inputs

--- a/intents/network/facets.yaml
+++ b/intents/network/facets.yaml
@@ -2,3 +2,6 @@ name: network
 type: Networking
 displayName: Network
 description: A collection of connected devices which provides medium to share resources within.
+outputs:
+  - name: default
+    type: "@outputs/network"
