--- a/modules/elasticsearch/k8s/0.2/facets.yaml
+++ b/modules/elasticsearch/k8s/0.2/facets.yaml
@@ -15,6 +15,17 @@ metadata:
       type: string
       title: Namespace 
       description: Namespace in which Elasticsearch should be deployed
+inputs:
+  kubernetes_details:
+    optional: false
+    type: "@outputs/kubernetes"
+    default:
+      resource_type: kubernetes_cluster
+      resource_name: default
+    providers:
+      - kubernetes
+      - kubernetes-alpha
+      - helm
 spec:
   title: K8s elasticsearch
   type: object
