--- a/modules/cassandra/k8s/0.1/facets.yaml
+++ b/modules/cassandra/k8s/0.1/facets.yaml
@@ -15,6 +15,17 @@ metadata:
       type: string
       title: Namespace
       description: Namespace in which Cassandra should be deployed
+inputs:
+  kubernetes_details:
+    optional: false
+    type: "@outputs/kubernetes"
+    default:
+      resource_type: kubernetes_cluster
+      resource_name: default
+    providers:
+      - kubernetes
+      - kubernetes-alpha
+      - helm
 spec:
   title: K8s Cassandra
   type: object
