--- a/modules/elasticsearch/monitoring/facets.yaml
+++ b/modules/elasticsearch/monitoring/facets.yaml
@@ -11,6 +11,16 @@ inputs:
   default:
     type: "@output/elasticsearch"
     adds_capability: true
+  kubernetes_details:
+    optional: false
+    type: "@outputs/kubernetes"
+    default:
+      resource_type: kubernetes_cluster
+      resource_name: default
+    providers:
+      - kubernetes
+      - kubernetes-alpha
+      - helm
 spec:
   title: Elasticsearch Monitoring
   type: object
