--- a/modules/google_workload_identity/default/1.0/facets.yaml
+++ b/modules/google_workload_identity/default/1.0/facets.yaml
@@ -7,7 +7,7 @@ description: Workload Identity is the recommended way to access GCP services fro
 inputs:
   kubernetes_details:
     optional: false
-    type: "@output/kubernetes"
+    type: "@outputs/gcp_gke"
     displayName: Kubernetes Cluster
     description: Details of Kubernetes where the kubernetes service account will be
       created.
