--- a/modules/log_collector/loki/0.2/facets.yaml
+++ b/modules/log_collector/loki/0.2/facets.yaml
@@ -7,6 +7,17 @@ clouds:
   - azure
   - gcp
   - kubernetes
+inputs:
+  kubernetes_details:
+    optional: false
+    type: "@outputs/kubernetes"
+    default:
+      resource_type: kubernetes_cluster
+      resource_name: default
+    providers:
+      - kubernetes
+      - kubernetes-alpha
+      - helm
 spec:
   title: Log Collector Spec
   type: object
