skip base64 encode and secret mig (#405)
* skip base64 encode and secret mig

* changed source of the module

* corrected the description

* removed schema from facets.yaml

* reading from spec

* changed flavor to k8s

* removed comments

* used conditional block and removed comment

* shorten the description

* Update modules/kubernetes_secret/k8s/0.3/locals.tf

---------

Co-authored-by: Rauneet Verma <rauneetverma@Rauneets-MacBook-Air.local>
Co-authored-by: Ishaan Kalra <108509616+ishaankalra@users.noreply.github.com>

--- a/modules/kubernetes_secret/k8s/0.3/facets.yaml
+++ b/modules/kubernetes_secret/k8s/0.3/facets.yaml
@@ -1,7 +1,7 @@
 intent: kubernetes_secret
 flavor: k8s
 version: '0.3'
-description: "kubernetes_secret - k8s"
+description: kubernetes_secret - k8s
 clouds:
 - aws
 - azure
@@ -10,14 +10,19 @@ clouds:
 spec:
   type: object
   properties:
+    skip_base64_encode:
+      title: Skip Base64 Encode
+      description: If true, the 'data' value is assumed pre-encoded (Base64) and will not be re-encoded. Defaults to false
+      type: boolean
+      default: false
     data:
       title: Data
       type: object
       description: Data objects containing key, value pair
       patternProperties:
-        "^[a-zA-Z0-9_.-]*$":
+        ^[a-zA-Z0-9_.-]*$:
           title: Data Object Block
-          description: something
+          description: Data object block containing key, value pair
           type: object
           properties:
             key:
@@ -30,8 +35,6 @@ spec:
               type: string
               x-ui-textarea: true
 sample:
-  $schema: >-
-    https://facets-cloud.github.io/facets-schemas/schemas/kubernetes_secret/kubernetes_secret.schema.json
   kind: kubernetes_secret
   disabled: true
   flavor: k8s
