--- a/modules/service/deployment/0.1/facets.yaml
+++ b/modules/service/deployment/0.1/facets.yaml
@@ -1,5 +1,5 @@
 intent: service
-flavor: deployment
+flavor: deployment_1
 alias-flavors: ["k8s", "default"]
 version: "0.1"
 description: Adds service module
@@ -1002,12 +1002,7 @@ spec:
               title: Environment Variables
               description: Map of environment variables passed to init container.
               type: object
-              patternProperties:
-                "^[a-zA-Z][a-zA-Z0-9_.-]*$":
-                  title: Evironment Variable
-                  description: Environment Variable
-                  type: string
-                  x-ui-yaml-editor: true
+              x-ui-yaml-editor: true
             additional_k8s_env:
               title: Additional Environment Variables
               description: List of evironment variables to be created from referencing
@@ -1271,12 +1266,7 @@ spec:
               title: Environment Variables
               description: Map of environment variables passed to init container
               type: object
-              patternProperties:
-                "^[a-zA-Z][a-zA-Z0-9_.-]*$":
-                  title: Evironment Variable
-                  description: Environment Variable
-                  type: string
-                  x-ui-yaml-editor: true
+              x-ui-yaml-editor: true
             additional_k8s_env:
               title: Additional Environment Variables
               description: List of evironment variables to be created from referencing
@@ -1785,7 +1775,7 @@ spec:
 sample:
   $schema: >-
     https://facets-cloud.github.io/facets-schemas/schemas/service/service.schema.json
-  flavor: deployment
+  flavor: deployment_1
   metadata:
     labels:
       deliveryType: MANUAL
