--- a/modules/service/deployment/0.1/facets.yaml
+++ b/modules/service/deployment/0.1/facets.yaml
@@ -317,11 +317,8 @@ spec:
             readiness_exec_command:
               type: array
               title: Readiness Exec Command
-              pattern: '^([^,]+)(,\s*[^,]+)*$'
-              x-ui-placeholder: "Enter readiness exec for the Pod, commands are separated
-                by commas"
-              x-ui-error-message: "Value doesn't match pattern, commands needs to
-                be comma separated"
+              x-ui-placeholder:  "Add each command argument as a new entry"
+              x-ui-error-message: "Enter each command/argument in a separate line"
               x-ui-visible-if:
                 field: spec.runtime.health_checks.readiness_check_type
                 values: ["ExecCheck"]
@@ -401,11 +398,8 @@ spec:
             liveness_exec_command:
               type: array
               title: Liveness Exec Command
-              pattern: '^([^,]+)(,\s*[^,]+)*$'
-              x-ui-placeholder: "Enter readiness exec for the Pod, commands are separated
-                by commas"
-              x-ui-error-message: "Value doesn't match pattern, commands needs to
-                be comma separated"
+              x-ui-placeholder: "Add each command argument as a new entry" 
+              x-ui-error-message: "Enter each command/argument in a separate line"
               x-ui-visible-if:
                 field: "spec.runtime.health_checks.liveness_check_type"
                 values: ["ExecCheck"]
@@ -493,11 +487,8 @@ spec:
             startup_exec_command:
               type: array
               title: Startup Exec Command
-              pattern: '^([^,]+)(,\s*[^,]+)*$'
-              x-ui-placeholder: "Enter startup exec for the Pod, commands are separated
-                by space"
-              x-ui-error-message: "Value doesn't match pattern, commands needs to
-                be space separated"
+              x-ui-placeholder: "Add each command argument as a new entry"
+              x-ui-error-message: "Enter each command/argument in a separate line"
               x-ui-visible-if:
                 field: spec.runtime.health_checks.startup_check_type
                 values: ["ExecCheck"]
@@ -1011,11 +1002,6 @@ spec:
               title: Environment Variables
               description: Map of environment variables passed to init container.
               type: object
-              patternProperties:
-                "^[a-zA-Z][a-zA-Z0-9_.-]*$":
-                  title: Evironment Variable
-                  description: Environment Variable
-                  type: string
               x-ui-yaml-editor: true
             additional_k8s_env:
               title: Additional Environment Variables
@@ -1280,11 +1266,6 @@ spec:
               title: Environment Variables
               description: Map of environment variables passed to init container
               type: object
-              patternProperties:
-                "^[a-zA-Z][a-zA-Z0-9_.-]*$":
-                  title: Evironment Variable
-                  description: Environment Variable
-                  type: string
               x-ui-yaml-editor: true
             additional_k8s_env:
               title: Additional Environment Variables
@@ -1600,11 +1581,8 @@ spec:
                     readiness_exec_command:
                       type: array
                       title: Readiness Exec Command
-                      pattern: '^([^,]+)(,\s*[^,]+)*$'
-                      x-ui-placeholder: "Enter readiness exec for the Pod, commands
-                        are separated by commas"
-                      x-ui-error-message: "Value doesn't match pattern, commands needs
-                        to be comma separated"
+                      x-ui-placeholder: "Add each command argument as a new entry"
+                      x-ui-error-message: "Enter each command/argument in a separate line"
                       x-ui-visible-if:
                         field: spec.sidecars.{{this}}.runtime.health_checks.readiness_check_type
                         values: ["ExecCheck"]
@@ -1672,11 +1650,8 @@ spec:
                     liveness_exec_command:
                       type: array
                       title: Liveness Exec Command
-                      pattern: '^([^,]+)(,\s*[^,]+)*$'
-                      x-ui-placeholder: "Enter readiness exec for the Pod, commands
-                        are separated by commas"
-                      x-ui-error-message: "Value doesn't match pattern, commands needs
-                        to be comma separated"
+                      x-ui-placeholder: "Add each command argument as a new entry"
+                      x-ui-error-message: "Enter each command/argument in a separate line"
                       x-ui-visible-if:
                         field: "spec.sidecars.{{this}}.runtime.health_checks.liveness_check_type"
                         values: ["ExecCheck"]
@@ -1744,11 +1719,8 @@ spec:
                     startup_exec_command:
                       type: array
                       title: Startup Exec Command
-                      pattern: '^([^,]+)(,\s*[^,]+)*$'
-                      x-ui-placeholder: "Enter startup exec for the Pod, commands
-                        are separated by space"
-                      x-ui-error-message: "Value doesn't match pattern, commands needs
-                        to be space separated"
+                      x-ui-placeholder: "Add each command argument as a new entry"
+                      x-ui-error-message: "Enter each command/argument in a separate line"
                       x-ui-visible-if:
                         field: spec.sidecars.{{this}}.runtime.health_checks.startup_check_type
                         values: ["ExecCheck"]
@@ -1801,8 +1773,6 @@ spec:
   - sidecars
   - cloud_permissions
 sample:
-  $schema: >-
-    https://facets-cloud.github.io/facets-schemas/schemas/service/service.schema.json
   flavor: deployment
   metadata:
     labels:
