--- a/modules/gcp_iam_role/default/0.1/facets.yaml
+++ b/modules/gcp_iam_role/default/0.1/facets.yaml
@@ -25,7 +25,7 @@ spec:
       items:
         type: string
       default: []
-      x-ui-override-disable: true
+      x-ui-overrides-only: true
       x-ui-yaml-editor: true
     excluded_permissions:
       type: array
@@ -34,7 +34,7 @@ spec:
       items:
         type: string
       default: []
-      x-ui-override-disable: true
+      x-ui-overrides-only: true
       x-ui-yaml-editor: true
     members:
       type: array
@@ -43,7 +43,7 @@ spec:
       items:
         type: string
       default: []
-      x-ui-override-disable: true
+      x-ui-overrides-only: true
       x-ui-yaml-editor: true
     base_roles:
       type: array
@@ -52,7 +52,7 @@ spec:
       items:
         type: string
       default: []
-      x-ui-override-disable: true
+      x-ui-overrides-only: true
       x-ui-yaml-editor: true
     stage:
       type: string
