--- a/modules/kafka/external/0.1/facets.yaml
+++ b/modules/kafka/external/0.1/facets.yaml
@@ -1,12 +1,12 @@
 intent: kafka
 flavor: external
-version: '0.1'
+version: "0.1"
 description: Adds Kafka module of kubernetes flavor
 clouds:
-- aws
-- azure
-- gcp
-- kubernetes
+  - aws
+  - azure
+  - gcp
+  - kubernetes
 spec:
   title: Kafka Spec
   type: object
@@ -15,90 +15,35 @@ spec:
       type: string
       title: Endpoint
       description: This is the Kafka Endpoint that is used to connect kafka instances
-      pattern: ^((([a-zA-Z0-9]([a-zA-Z0-9-]*[a-zA-Z0-9])?\.)+[a-zA-Z]{2,}|localhost|(\d{1,3}\.){3}\d{1,3})):(6553[0-5]|655[0-2]\d|65[0-4]\d{2}|6[0-4]\d{3}|[1-5]\d{4}|\d{1,4})$
-      x-ui-placeholder: Enter the Kafka endpoint in the format host:port
-      x-ui-error-message: Value must be in the format host:port, where host is a valid
-        domain name or IP address, and port is a number between 1 and 65535.
+      pattern: '^((([a-zA-Z0-9]([a-zA-Z0-9-]*[a-zA-Z0-9])?\.)+[a-zA-Z]{2,}|localhost|(\d{1,3}\.){3}\d{1,3})):(6553[0-5]|655[0-2]\d|65[0-4]\d{2}|6[0-4]\d{3}|[1-5]\d{4}|\d{1,4})$'
+      x-ui-placeholder: "Enter the Kafka endpoint in the format host:port"
+      x-ui-error-message: "Value must be in the format host:port, where host is a valid domain name or IP address, and port is a number between 1 and 65535."
     username:
       type: string
       title: Username
       description: This is the Kafka username that is used to connect kafka instances
-      pattern: ^[a-zA-Z0-9_-]+$
-      x-ui-placeholder: Enter the Kafka username
-      x-ui-error-message: Username can only contain alphanumeric characters, underscores,
-        or hyphens.
+      pattern: '^[a-zA-Z0-9_-]+$'
+      x-ui-placeholder: "Enter the Kafka username"
+      x-ui-error-message: "Username can only contain alphanumeric characters, underscores, or hyphens."
     password:
       type: string
       title: Password
       description: This is the Kafka password that is used to connect kafka instances
-      x-ui-type: password
     connection_string:
       type: string
       title: Connection String
-      description: This is the Kafka connections string with protocol that is used
-        to connect kafka instances
-      pattern: ^kafka:\/\/[a-zA-Z0-9._%+-]+:[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+(:[0-9]{1,5})(,[a-zA-Z0-9.-]+(:[0-9]{1,5}))*$
-      x-ui-placeholder: kafka://username:password@host:port
-      x-ui-error-message: Connection string must be in the format kafka://username:password@host:port
-    security_protocol:
-      type: string
-      title: Security Protocol
-      description: Protocol used to communicate with brokers
-      enum:
-      - PLAINTEXT
-      - SSL
-      - SASL_PLAINTEXT
-      - SASL_SSL
-      default: PLAINTEXT
-      x-ui-placeholder: Select security protocol
-    client_id:
-      type: string
-      title: Client ID
-      description: An id string to pass to the server when making requests
-      pattern: ^[a-zA-Z0-9._-]+$
-      minLength: 1
-      maxLength: 255
-      x-ui-placeholder: my-kafka-client
-      x-ui-error-message: Client ID can contain letters, numbers, dots, underscores,
-        and hyphens
-    environment:
-      type: string
-      title: Environment
-      description: Environment designation
-      enum:
-      - development
-      - staging
-      - production
-      x-ui-placeholder: Select environment
-    request_timeout_ms:
-      type: integer
-      title: Request Timeout (ms)
-      description: Maximum time to wait for a response
-      minimum: 1000
-      maximum: 300000
-      default: 30000
-      x-ui-placeholder: 30000
-    health_check_enabled:
-      type: boolean
-      title: Enable Health Checks
-      description: Enable Kafka health monitoring
-      default: true
-  required:
-  - connection_string
-  - endpoint
+      description: This is the Kafka connections string with protocol that is used to connect kafka instances
+      pattern: "^kafka:\\/\\/[a-zA-Z0-9._%+-]+:[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+(:[0-9]{1,5})(,[a-zA-Z0-9.-]+(:[0-9]{1,5}))*$"
+  required: ["connection_string", "endpoint"]
 sample:
+  $schema: "https://facets-cloud.github.io/facets-schemas/schemas/kafka/kafka.schema.json"
   kind: kafka
-  version: '0.1'
+  version: "0.1"
   flavor: external
   disabled: true
   metadata: {}
   spec:
-    username: ''
-    password: ''
-    endpoint: ''
-    connection_string: ''
-    security_protocol: PLAINTEXT
-    client_id: facets-kafka-client
-    environment: development
-    request_timeout_ms: 30000
-    health_check_enabled: true
+    username: ""
+    password: ""
+    endpoint: ""
+    connection_string: ""
