--- a/modules/kafka_user/external/0.1/facets.yaml
+++ b/modules/kafka_user/external/0.1/facets.yaml
@@ -1,5 +1,5 @@
 intent: kafka_user
-flavor: external
+flavor: kafka_user-test
 version: '0.1'
 description: Adds kafka_user - default flavor
 clouds:
@@ -13,16 +13,15 @@ spec:
   properties:
     username:
       type: string
-      title: Endpoint
+      title: Username
       description: This is the Kafka username that is used to connect kafka instances
     password:
       type: string
-      title: Endpoint
+      title: Password
       description: This is the Kafka password that is used to connect kafka instances
 sample:
-  $schema: https://facets-cloud.github.io/facets-schemas/schemas/kafka_user/kafka_user.schema.json
   kind: kafka_user
-  flavor: external
+  flavor: kafka_user-test
   version: '0.1'
   disabled: false
   metadata: {}
