--- a/modules/cloud_account/azure/0.2/facets.yaml
+++ b/modules/cloud_account/azure/0.2/facets.yaml
@@ -52,6 +52,15 @@ outputs:
           client_id: attributes.client_id
           client_secret: attributes.client_secret
           tenant_id: attributes.tenant_id
+      azurerm:
+        source: hashicorp/azurerm
+        version: 4.36.0
+        attributes:
+          features: { }
+          subscription_id: attributes.subscription_id
+          client_id: attributes.client_id
+          client_secret: attributes.client_secret
+          tenant_id: attributes.tenant_id
 sample:
   version: '0.2'
   flavor: azure
