--- a/modules/cloud_account/gcp/0.2/facets.yaml
+++ b/modules/cloud_account/gcp/0.2/facets.yaml
@@ -36,6 +36,13 @@ outputs:
   default:
     type: '@outputs/cloud_account'
     providers:
+      google:
+        source: hashicorp/google
+        version: 6.43.0
+        attributes:
+          project: attributes.project
+          region: attributes.region
+          credentials: attributes.credentials
       google5:
         source: hashicorp/google5
         version: 5.32.0
