--- a/modules/kubernetes_node_pool/aks/0.1/facets.yaml
+++ b/modules/kubernetes_node_pool/aks/0.1/facets.yaml
@@ -1,9 +1,26 @@
 intent: kubernetes_node_pool
 flavor: aks
-version: "0.1"
+version: 0.1
 description: Adds kubernetes_node_pool - aks flavor
 clouds:
 - azure
+inputs:
+  kubernetes_details:
+    optional: false
+    type: '@outputs/kubernetes'
+    default:
+      resource_type: kubernetes_cluster
+      resource_name: default
+    providers:
+    - kubernetes
+    - kubernetes-alpha
+    - helm
+  network_details:
+    optional: false
+    type: '@outputs/azure_vpc'
+    default:
+      resource_type: network
+      resource_name: default
 spec:
   title: Kubernetes Node Pool
   description: Specification of the kubernetes node pool for aks flavor
@@ -30,17 +47,17 @@ spec:
       title: Disk Size
       description: Size of the Disk in GiB for node in this node pool
       type: string
-      pattern: '\b((5[0-9]G)|([6-9][0-9]G)|([1-9][0-9][0-9]G)|(1000G))\b'
-      x-ui-placeholder: "eg. 50G"
-      x-ui-error-message: "Value doesn't match the format eg. 50G. Minimum is 50G
-        and max is 1000G"
+      pattern: \b((5[0-9]G)|([6-9][0-9]G)|([1-9][0-9][0-9]G)|(1000G))\b
+      x-ui-placeholder: eg. 50G
+      x-ui-error-message: Value doesn't match the format eg. 50G. Minimum is 50G and
+        max is 1000G
     taints:
       title: Taints
       description: Map of Kubernetes taints which should be applied to nodes in the
         node pool
       type: object
       patternProperties:
-        "^[a-z][a-z0-9-_]*$":
+        ^[a-z][a-z0-9-_]*$:
           type: object
           title: Taint Object
           properties:
@@ -53,7 +70,7 @@ spec:
               title: Taint Value
               description: Taint Value
               type: string
-              x-ui-placeholder: "true"
+              x-ui-placeholder: 'true'
             effect:
               title: Taint Effect
               description: Taint Effect
@@ -61,10 +78,10 @@ spec:
               x-ui-placeholder: NoSchedule
     labels:
       title: Labels
-      description: "Map of labels to be added to nodes in node pool. Enter key-value
-        pair for labels in YAML format. Eg. key: value (provide a space after ':'
-        as expected in the YAML format)"
-      x-ui-placeholder: "Eg. key1: value1"
+      description: 'Map of labels to be added to nodes in node pool. Enter key-value
+        pair for labels in YAML format. Eg. key: value (provide a space after '':''
+        as expected in the YAML format)'
+      x-ui-placeholder: 'Eg. key1: value1'
       type: object
       x-ui-yaml-editor: true
   required:
@@ -73,10 +90,7 @@ spec:
   - max_node_count
   - disk_size
   - taints
-  - labels
 sample:
-  $schema: 
-    https://facets-cloud.github.io/facets-schemas/schemas/kubernetes_node_pool/kubernetes_node_pool.schema.json
   flavor: aks
   kind: kubernetes_node_pool
   metadata:
@@ -84,7 +98,7 @@ sample:
       managed-by: facets
     annotations: {}
   disabled: true
-  version: "0.1"
+  version: 0.1
   spec:
     instance_type: Standard_F8
     min_node_count: 0
